@startuml
'https://plantuml.com/class-diagram

class MostEfficientCircuitUI {
- controller
}

class MostEfficientCircuitController {
- freightNetwork
+ getMostEfficientCircuit(source location)
}

class FreightNetwork {
+ getMostEfficientCircuit(source location)
+ findVertexByName(name)
}

MostEfficientCircuitController <.. MostEfficientCircuitUI
FreightNetwork <.. MostEfficientCircuitController

@enduml